proj1/tests/other-tests/oskis-angels_tests/correct/for-all-in-one.py
for i in 1, 2, 3:
  for j in (5, 6, 7):
    for k in [8, 9, 10]:
        print i * j * k
