proj1/tests/other-tests/oskis-angels_tests/error/loops-for-missing-var.py
for in [1,2]:
    1
